# example_rust_wasm_yew_plotly_github_pages_website

./: Cargo.toml  README.md
docs/: index.html  wasm-yew-minimal-318d9e374fef3f89.js  wasm-yew-minimal-318d9e374fef3f89_bg.wasm  wasm-yew-minimal-3e3dee20cfe66c1f.js  wasm-yew-minimal-3e3dee20cfe66c1f_bg.wasm
src/: main.rs
