[package]
name = "wasm-yew-minimal"
version = "0.1.0"
authors = ["Jonathan Shimwell <mail@jshimwell.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.4", features = ["wasm"] }
yew = "0.19.0"
yew-hooks = "0.1.56"
log = "0.4.6"
wasm-logger = "0.2"
